# READ_EDAB_Utilities

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  environment.yml  pyproject.toml  requirements.txt  test_inputs.R
R/: add.R  crop_nc_2d.R  make_2d_anomaly_gridded.R  make_2d_anomaly_ts.R  make_2d_climatology_gridded.R  make_2d_climatology_ts.R  make_2d_deg_day_gridded.R  make_2d_deg_day_ts.R  make_2d_summary_gridded.R  make_2d_summary_ts.R  mask_nc_2d.R  subtract.R  summary_2d_gridded_nc.R  summary_2d_ts_nc.R  summary_nc_2d.R  testgithubAPI.R
READ_EDAB_Utilities/: __init__.py  adding_numbers.py
data/: GLORYS_daily_BottomSalinity_EPU_mask_2019.nc  data1.rda
man/: add.Rd  crop_nc_2d.Rd  make_2d_anomaly_gridded.Rd  make_2d_anomaly_ts.Rd  make_2d_climatology_gridded.Rd  make_2d_climatology_ts.Rd  make_2d_deg_day_gridded_nc.Rd  make_2d_deg_day_ts.Rd  make_2d_summary_gridded.Rd  make_2d_summary_ts.Rd  mask_nc_2d.Rd  subtract.Rd  summary_2d_gridded_nc.Rd  summary_2d_ts_nc.Rd
test_data/: test_inputs.R
vignettes/: 2d_gridded.Rmd  2d_timeseries.Rmd  vignette1.Rmd
