[build system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testfunctionpy"
version = "0.0.1dev1"
description = "test function"
readme = "README.md"
authors = [{ name = "Laura Gruenburg" }]
dependencies = [
    "numpy"
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.setuptools]
packages.find.where = ["."]
packages.find.include = ["testfunctionpy*"]